Use case club manage