@@ -64,17 +64,27 @@
                             <goal>java</goal>
                         </goals>
                         <configuration>
-                            <mainClass>com.sportify.manager.frame.LoginFrame</mainClass>
+                            <mainClass>com.sportify.manager.frame.ClubManagementFrame</mainClass>
                             <classpathScope>compile</classpathScope>
+                            <arguments>
+                                <argument>--module-path</argument>
+                                <argument>${javafx.home}/lib</argument>
+                                <argument>--add-modules</argument>
+                                <argument>javafx.controls,javafx.fxml</argument>
+                            </arguments>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
 
+            <!-- JavaFX Maven Plugin (version 0.0.8) -->
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.4</version>
+                <version>0.0.8</version> <!-- Version mise à jour -->
+                <configuration>
+                    <mainClass>com.sportify.manager.frame.LoginFrame</mainClass>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
@@ -83,8 +93,6 @@
                     </execution>
                 </executions>
             </plugin>
-
-
 
         </plugins>
     </build>
